[gd_scene load_steps=9 format=2]

[ext_resource path="res://meething/meeting_buttongroup.tres" type="ButtonGroup" id=1]
[ext_resource path="res://network_setup/Base_font.tres" type="DynamicFont" id=2]
[ext_resource path="res://multiplayer.gd" type="Script" id=3]
[ext_resource path="res://waiting_room/Generic_Home_1_preview_48x48.png" type="Texture" id=4]
[ext_resource path="res://art/รูปภาพ6.png" type="Texture" id=5]
[ext_resource path="res://art/รูปภาพ7.png" type="Texture" id=6]

[sub_resource type="GDScript" id=2]
resource_name = "meeting_time_progress_bar"
script/source = "extends TextureProgress


func _process(delta):
	if get_node('%meeting_timer').time_left >0:
			get_node('%meeting_time_progress_bar').value = 100-((get_node('%meeting_timer').time_left / get_node('%meeting_timer').wait_time)*100)
"

[sub_resource type="AudioStreamMicrophone" id=3]

[node name="multiplayer" type="Node2D"]
script = ExtResource( 3 )

[node name="map" type="YSort" parent="."]

[node name="waiting_room" type="YSort" parent="map"]
unique_name_in_owner = true

[node name="wating_room_spawn_location_group" type="Node" parent="map/waiting_room"]
unique_name_in_owner = true

[node name="0" type="Position2D" parent="map/waiting_room/wating_room_spawn_location_group"]
position = Vector2( 992, 484 )

[node name="generic_home_1_preview_48_x_48" type="Sprite" parent="map/waiting_room"]
self_modulate = Color( 1, 1, 1, 0.392157 )
position = Vector2( 931.5, 625.5 )
scale = Vector2( 2.75744, 2.15732 )
texture = ExtResource( 4 )

[node name="level" type="YSort" parent="map"]
unique_name_in_owner = true

[node name="player_group" type="YSort" parent="map"]
unique_name_in_owner = true

[node name="dead_body_group" type="YSort" parent="map"]
unique_name_in_owner = true

[node name="multiplayer_ui" type="CanvasLayer" parent="."]
unique_name_in_owner = true

[node name="waiting_room_ui" type="Control" parent="multiplayer_ui"]
unique_name_in_owner = true
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="item_list" type="ItemList" parent="multiplayer_ui/waiting_room_ui"]
unique_name_in_owner = true
self_modulate = Color( 1, 1, 1, 0.392157 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1330.0
margin_top = 10.0

[node name="start_button" type="Button" parent="multiplayer_ui/waiting_room_ui"]
unique_name_in_owner = true
modulate = Color( 1, 1, 1, 0.392157 )
margin_left = 715.0
margin_top = 858.0
margin_right = 1199.0
margin_bottom = 968.0
text = "เริ่มเกม"

[node name="ip_address_label" type="Label" parent="multiplayer_ui/waiting_room_ui"]
unique_name_in_owner = true
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -150.0
margin_right = 0.00012207
custom_fonts/font = ExtResource( 2 )
align = 1
valign = 1

[node name="exit_button" type="Button" parent="multiplayer_ui/waiting_room_ui"]
self_modulate = Color( 1, 1, 1, 0.392157 )
margin_left = 16.0
margin_top = 5.0
margin_right = 448.0
margin_bottom = 115.0
text = "ออกจากห้อง"

[node name="ready_button" type="Button" parent="multiplayer_ui/waiting_room_ui"]
unique_name_in_owner = true
self_modulate = Color( 1, 1, 1, 0.392157 )
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -110.0
margin_right = 203.0
toggle_mode = true
text = "พร้อม"

[node name="pre_game_ui" type="Control" parent="multiplayer_ui"]
unique_name_in_owner = true
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="color_rect" type="ColorRect" parent="multiplayer_ui/pre_game_ui"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0.576471, 1, 1 )

[node name="pre_game_you_ara_label" type="Label" parent="multiplayer_ui/pre_game_ui"]
unique_name_in_owner = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -159.5
margin_top = -52.0
margin_right = 159.5
margin_bottom = 52.0
text = "โหลดเกม"

[node name="in_game_ui" type="Control" parent="multiplayer_ui"]
unique_name_in_owner = true
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="meeting_ui" type="Control" parent="multiplayer_ui"]
unique_name_in_owner = true
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="panel" type="Panel" parent="multiplayer_ui/meeting_ui"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="meeting_timer" type="Timer" parent="multiplayer_ui/meeting_ui"]
unique_name_in_owner = true
wait_time = 20.0
one_shot = true

[node name="center_container" type="CenterContainer" parent="multiplayer_ui/meeting_ui"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="vote_box_container" type="GridContainer" parent="multiplayer_ui/meeting_ui/center_container"]
unique_name_in_owner = true
margin_left = 154.0
margin_top = 338.0
margin_right = 1766.0
margin_bottom = 742.0
grow_horizontal = 2
grow_vertical = 2
columns = 4

[node name="vote_bt_0" type="Button" parent="multiplayer_ui/meeting_ui/center_container/vote_box_container"]
margin_right = 400.0
margin_bottom = 200.0
rect_min_size = Vector2( 400, 200 )
toggle_mode = true
group = ExtResource( 1 )

[node name="label" type="Label" parent="multiplayer_ui/meeting_ui/center_container/vote_box_container/vote_bt_0"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -102.0
margin_top = -104.0
align = 1
valign = 1

[node name="vote_bt_1" type="Button" parent="multiplayer_ui/meeting_ui/center_container/vote_box_container"]
margin_left = 404.0
margin_right = 804.0
margin_bottom = 200.0
rect_min_size = Vector2( 400, 200 )
toggle_mode = true
group = ExtResource( 1 )

[node name="label" type="Label" parent="multiplayer_ui/meeting_ui/center_container/vote_box_container/vote_bt_1"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -102.0
margin_top = -104.0
align = 1
valign = 1

[node name="vote_bt_2" type="Button" parent="multiplayer_ui/meeting_ui/center_container/vote_box_container"]
margin_left = 808.0
margin_right = 1208.0
margin_bottom = 200.0
rect_min_size = Vector2( 400, 200 )
toggle_mode = true
group = ExtResource( 1 )

[node name="label" type="Label" parent="multiplayer_ui/meeting_ui/center_container/vote_box_container/vote_bt_2"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -102.0
margin_top = -104.0
align = 1
valign = 1

[node name="vote_bt_3" type="Button" parent="multiplayer_ui/meeting_ui/center_container/vote_box_container"]
margin_left = 1212.0
margin_right = 1612.0
margin_bottom = 200.0
rect_min_size = Vector2( 400, 200 )
toggle_mode = true
group = ExtResource( 1 )

[node name="label" type="Label" parent="multiplayer_ui/meeting_ui/center_container/vote_box_container/vote_bt_3"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -102.0
margin_top = -104.0
align = 1
valign = 1

[node name="vote_bt_4" type="Button" parent="multiplayer_ui/meeting_ui/center_container/vote_box_container"]
margin_top = 204.0
margin_right = 400.0
margin_bottom = 404.0
rect_min_size = Vector2( 400, 200 )
toggle_mode = true
group = ExtResource( 1 )

[node name="label" type="Label" parent="multiplayer_ui/meeting_ui/center_container/vote_box_container/vote_bt_4"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -102.0
margin_top = -104.0
align = 1
valign = 1

[node name="vote_bt_5" type="Button" parent="multiplayer_ui/meeting_ui/center_container/vote_box_container"]
margin_left = 404.0
margin_top = 204.0
margin_right = 804.0
margin_bottom = 404.0
rect_min_size = Vector2( 400, 200 )
toggle_mode = true
group = ExtResource( 1 )

[node name="label" type="Label" parent="multiplayer_ui/meeting_ui/center_container/vote_box_container/vote_bt_5"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -102.0
margin_top = -104.0
align = 1
valign = 1

[node name="vote_bt_6" type="Button" parent="multiplayer_ui/meeting_ui/center_container/vote_box_container"]
margin_left = 808.0
margin_top = 204.0
margin_right = 1208.0
margin_bottom = 404.0
rect_min_size = Vector2( 400, 200 )
toggle_mode = true
group = ExtResource( 1 )

[node name="label" type="Label" parent="multiplayer_ui/meeting_ui/center_container/vote_box_container/vote_bt_6"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -102.0
margin_top = -104.0
align = 1
valign = 1

[node name="vote_bt_7" type="Button" parent="multiplayer_ui/meeting_ui/center_container/vote_box_container"]
margin_left = 1212.0
margin_top = 204.0
margin_right = 1612.0
margin_bottom = 404.0
rect_min_size = Vector2( 400, 200 )
toggle_mode = true
group = ExtResource( 1 )

[node name="label" type="Label" parent="multiplayer_ui/meeting_ui/center_container/vote_box_container/vote_bt_7"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -102.0
margin_top = -104.0
align = 1
valign = 1

[node name="vote_bt_skip" type="Button" parent="multiplayer_ui/meeting_ui"]
unique_name_in_owner = true
margin_left = 88.0
margin_top = 909.0
margin_right = 388.0
margin_bottom = 1019.0
rect_min_size = Vector2( 300, 100 )
toggle_mode = true
group = ExtResource( 1 )
text = "ข้าม"

[node name="label" type="Label" parent="multiplayer_ui/meeting_ui/vote_bt_skip"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 232.0
align = 1
valign = 1

[node name="meeting_time_progress_bar" type="TextureProgress" parent="multiplayer_ui/meeting_ui"]
unique_name_in_owner = true
anchor_right = 1.0
margin_left = 1605.0
margin_top = 34.0
margin_right = -76.0
margin_bottom = 272.0
value = 50.0
texture_under = ExtResource( 5 )
texture_progress = ExtResource( 6 )
fill_mode = 4
nine_patch_stretch = true
script = SubResource( 2 )

[node name="next_round_ui" type="Control" parent="multiplayer_ui"]
unique_name_in_owner = true
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="color_rect" type="ColorRect" parent="multiplayer_ui/next_round_ui"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.843137, 0.890196, 0.266667, 1 )

[node name="end_game_ui" type="Control" parent="multiplayer_ui"]
unique_name_in_owner = true
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="color_rect" type="ColorRect" parent="multiplayer_ui/end_game_ui"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.141176, 0, 0.164706, 1 )

[node name="end_game_label" type="Label" parent="multiplayer_ui/end_game_ui"]
unique_name_in_owner = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -100.0
margin_right = 200.0
margin_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
text = "Good player win"
align = 1
valign = 1

[node name="mini_game_ui" type="Control" parent="multiplayer_ui"]
unique_name_in_owner = true
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="talk_audio_stream_player_2d" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = SubResource( 3 )
autoplay = true
bus = "Record"

[node name="send_recording_timer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[connection signal="pressed" from="multiplayer_ui/waiting_room_ui/start_button" to="." method="_on_waiting_room_start_button_pressed"]
[connection signal="pressed" from="multiplayer_ui/waiting_room_ui/exit_button" to="." method="_on_waiting_room_exit_button_pressed"]
[connection signal="toggled" from="multiplayer_ui/waiting_room_ui/ready_button" to="." method="_on_waiting_room_ready_button_toggled"]
[connection signal="timeout" from="multiplayer_ui/meeting_ui/meeting_timer" to="." method="_on_meeting_timer_timeout"]
[connection signal="timeout" from="send_recording_timer" to="." method="_on_send_recording_timer_timeout"]
